--- a/kubernetes-studentapp-dockerfile-rds-endpoint--main/Kuberntes/backend/deployment.yaml
+++ b/kubernetes-studentapp-dockerfile-rds-endpoint--main/Kuberntes/backend/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       spec:
         containers:
           - name: tomcatapp
-            image: anupdudhe/backendrds
+            image: omkarnirmal/k8s-dockerfile-backend
             ports:
                 - containerPort: 8080
                   protocol: TCP
