--- a/kubernetes-studentapp-dockerfile-rds-endpoint--main/Kuberntes/frontend/deployment.yml
+++ b/kubernetes-studentapp-dockerfile-rds-endpoint--main/Kuberntes/frontend/deployment.yml
@@ -19,7 +19,7 @@ spec:
       spec:
         containers:
           - name: httpapp
-            image: anupdudhe/frontendrds
+            image: omkarnirmal/k8s-dockerfile-frontend
             ports:
                 - containerPort: 80
                   protocol: TCP
