--- a/kubernetes-studentapp-dockerfile-rds-endpoint--main/Dockerfile/Frontend/proxy.conf
+++ b/kubernetes-studentapp-dockerfile-rds-endpoint--main/Dockerfile/Frontend/proxy.conf
@@ -1,4 +1,4 @@
-ProxyPass "/student" "http://10.100.247.106 :8080/student"
-ProxyPassReverse "/student" "http://10.100.247.106:8080/student"
+ProxyPass "/student" "http://10.100.186.50:8080/student"
+ProxyPassReverse "/student" "http://10.100.186.50:8080/student"
 
 #insert clusterIPofbackendendtomcatpods
